--- a/app/assets/i18n/_missing_translations_pt_BR.json
+++ b/app/assets/i18n/_missing_translations_pt_BR.json
@@ -4,12 +4,12 @@
     "After editing this file, you can run 'dart run slang apply --locale=pt-BR' to quickly apply the newly added translations."
   ],
   "general": {
-    "delete": "Delete",
-    "noItemInClipboard": "No item in Clipboard"
+    "delete": "Excluir",
+    "noItemInClipboard": "Nenhum item na Área de Tramsferẽncia"
   },
   "sendTab": {
     "picker": {
-      "clipboard": "Paste"
+      "clipboard": "Colar"
     }
   },
   "settingsTab": {
@@ -22,20 +22,20 @@
   "dialogs": {
     "favoriteDialog": {
       "title": "Favorites",
-      "noFavorites": "No favorites devices yet.",
-      "addFavorite": "Add"
+      "noFavorites": "Nenhum dispositivo favorito ainda.",
+      "addFavorite": "Adicionar"
     },
     "favoriteDeleteDialog": {
-      "title": "Delete from favorites",
-      "content": "Do you really want to delete from favorites \"{name}\"?"
+      "title": "Excluir dos favoritos",
+      "content": "Você realmente quer excluir dos favoritos \"{name}\"?"
     },
     "favoriteEditDialog": {
-      "titleAdd": "Add to favorites",
-      "titleEdit": "Adjust",
+      "titleAdd": "Adicionar aos favoritos",
+      "titleEdit": "Ajuste",
       "name": "Alias",
       "auto": "(auto)",
-      "ip": "IP Address",
-      "port": "Port"
+      "ip": "Endereço IP",
+      "port": "Porta"
     }
   }
 }
