--- a/app/assets/i18n/_missing_translations_pt_BR.json
+++ b/app/assets/i18n/_missing_translations_pt_BR.json
@@ -32,8 +32,8 @@
     "favoriteEditDialog": {
       "titleAdd": "Adicionar aos favoritos",
       "titleEdit": "Ajuste",
-      "name": "Alias",
-      "auto": "(auto)",
+      "name": "Apelido",
+      "auto": "(automático)",
       "ip": "Endereço IP",
       "port": "Porta"
     }
